# cubizm_game

./: .gitignore  Cargo.toml
assets/blocks/info/: air.block  dirt.block  test.block
assets/world/chunks/: test.chunk  test2.chunk
crates/block-mesh-rs/: Cargo.toml
crates/block-mesh-rs/src/: buffer.rs  lib.rs  simple.rs
crates/block-mesh-rs/src/geometry/: face.rs  quad.rs
crates/cubizm/: Cargo.toml
crates/cubizm/src/: block.rs  chunk.rs  chunks.rs  lib.rs  util.rs
crates/cubizm_block/: Cargo.toml
crates/cubizm_block/src/: definition.rs  lib.rs  loader.rs  mod.rs  texture_atlas.rs  voxel.rs
crates/cubizm_chunks/: Cargo.toml
crates/cubizm_chunks/src/: lib.rs
crates/cubizm_chunks/src/chunk/: definition.rs  loader.rs  mod.rs
crates/cubizm_chunks/src/chunks/: definition.rs  mod.rs
crates/cubizm_core/: Cargo.toml
crates/cubizm_core/src/: lib.rs  util.rs
examples/: generate_test_block.rs  generate_test_chunk.rs
imported_assets/: log
imported_assets/Default/blocks/info/: air.block  test.block
src/: lib.rs  main.rs
