[package]
name = "cubizm_game"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

exclude = [
    "crates/block-mesh-rs/examples-crate"
]

members = [
    "crates/cubizm_core",
    "crates/block-mesh-rs",
    "crates/cubizm_block",
    "crates/cubizm_chunks"
]


[dependencies]
cubizm_core = { path = "crates/cubizm_core" }
cubizm_chunks = { path = "crates/cubizm_chunks" }
cubizm_block = { path = "crates/cubizm_block" }
block-mesh = { path = "crates/block-mesh-rs" }
bevy = "0.13.1"
bevy_flycam = "0.13.0"
